--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
             <div class="header">
                 <h1>Hello! My name is Zane Dunn</h1>
                 <br><hr><br>
-                <h3>I'm a Junior Software Engineer trainee. 💻</h3> 
+                <h3>I'm a Junior Software Developer trainee. 💻</h3> 
                 <h3>Working to get into the tech industry and earn an income with my passion and skills.</h3>
             </div>
             
